--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@ Come and join us!</p></article>
       <div class="w3-card-2">
         <img src="/w3images/team2.jpg" alt="John" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
+          <h3>name</h3>
           <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>description.</p>
           <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
@@ -173,9 +173,9 @@ Come and join us!</p></article>
       <div class="w3-card-2">
         <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
         <div class="w3-container">
-          <h3>Anja Doe</h3>
+          <h3>name</h3>
           <p class="w3-opacity">Art Director</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>description.</p>
           <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
@@ -184,9 +184,9 @@ Come and join us!</p></article>
       <div class="w3-card-2">
         <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
+          <h3>name</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>description.</p>
           <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
@@ -195,9 +195,9 @@ Come and join us!</p></article>
       <div class="w3-card-2">
         <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
         <div class="w3-container">
-          <h3>Dan Star</h3>
+          <h3>name</h3>
           <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>description.</p>
           <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
