arrange about us

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ body, html {
   <p class="w3-center w3-large"></p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
   <article>
-     <p>Hi!
-We are QTPi.
-Indeed!
+     <p align="left">Hi!
+<!-- We are QTPi.
+Indeed! -->
 We are QTPi, perhaps because we are always curious.
 Curious about robots.
 We believe that, ‘HOW?’ is as important, and also, the precursor to the biggest question of life, ‘WHY?!’
@@ -100,7 +100,7 @@ At the core, QTPi runs on the revolutionary chipset, Arduino, that best suits fo
 Science is continuously evolving. 
 At the ebb of this expansion is technological innovation in robotics.
 Every day, our lives are touched in more than one way by robots. 
-Some are perceivable, some are not.
+Some are perceivable, some are not.<img src="2a.jpg" width="400" height="300" align="right">
 In an all-consuming, all digital world that would in future, be increasingly dependent, learning about how robots and automation work is truly necessary for everyone, especially our children. 
 As the Internet is slowly spreading wings, and getting all the tangible, and intangible stuff from our everyday lives connected to it, in order to make everything most useful and efficient, at the core lies robotics and artificial intelligence.
 Touch, see, and feel the learning.
