--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ body, html {
     <!-- Right-sided navbar links -->
     <li class="w3-right w3-hide-small">
       <a href="#about">ABOUT</a>
-      <a href="#team"><i class="fa fa-user"></i> TEAM</a>
+      <!-- <a href="#team"><i class="fa fa-user"></i> TEAM</a> -->
       <a href="#work"><i class="fa fa-th"></i> WORK</a>
-      <a href="#pricing"><i class="fa fa-calendar-check-o"></i> Events</a>
+      <a href="#events"><i class="fa fa-calendar-check-o"></i> Events</a>
       <a href="#contact"><i class="fa fa-envelope"></i> CONTACT</a>
     </li>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -52,9 +52,9 @@ body, html {
 <nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close ×</a>
   <a href="#about" onclick="w3_close()">ABOUT</a>
-  <a href="#team" onclick="w3_close()">TEAM</a>
+  <!-- <a href="#team" onclick="w3_close()">TEAM</a> -->
   <a href="#work" onclick="w3_close()">WORK</a>
-  <a href="#pricing" onclick="w3_close()">Events</a>
+  <a href="#events" onclick="w3_close()">Events</a>
   <a href="#contact" onclick="w3_close()">CONTACT</a>
 </nav>
 
@@ -67,11 +67,11 @@ body, html {
     <p><a href="#about" class="w3-btn w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-padding-xxlarge w3-text-grey w3-large">
-    <a href="#" class="w3-hover-text-white"><i class="fa fa-facebook-official"></i></a>
-    <a href="#" class="w3-hover-text-white"><i class="fa fa-flickr"></i></a>
-    <a href="#" class="w3-hover-text-white"><i class="fa fa-instagram"></i></a>
-    <a href="#" class="w3-hover-text-white"><i class="fa fa-twitter"></i></a>
-    <a href="#" class="w3-hover-text-white"><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"><i class="fa fa-facebook-official"></i></a>
+   <!--  <a href="#" class="w3-hover-text-white"><i class="fa fa-flickr"></i></a> -->
+    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"><i class="fa fa-instagram"></i></a>
+    <!-- <a href="#" class="w3-hover-text-white"><i class="fa fa-twitter"></i></a>
+    <a href="#" class="w3-hover-text-white"><i class="fa fa-linkedin"></i></a> -->
   </div>
 </header>
 
@@ -144,7 +144,7 @@ Come and join us!</p></article>
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>We know design.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore.</p>
+      <p>we have our own building block so we can build our own design. <br>we can also make our own building block structure through 3D-printer.</p>
       <p><a href="#work" class="w3-btn"><i class="fa fa-th"></i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
@@ -154,7 +154,7 @@ Come and join us!</p></article>
 </div>
 
 <!-- Team Section -->
-<div class="w3-container w3-padding-128" id="team">
+<!-- <div class="w3-container w3-padding-128" id="team">
   <h3 class="w3-center">THE TEAM</h3>
   <p class="w3-center w3-large">The ones who runs this company</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
@@ -204,7 +204,7 @@ Come and join us!</p></article>
     </div>
   </div>
 </div>
-
+ -->
 <!-- Promo Section "Statistics" -->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
  <!--  <div class="w3-quarter">
@@ -275,10 +275,10 @@ Come and join us!</p></article>
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Our Skills.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
+      <p><br>
+      We are developing real time project. mainlly we are developing robot related product </p>
+      <p>we want to provide a new enviroment for kids. so they can learn about robot easily<br>
+      </p>
     </div>
     <div class="w3-col m6">
       <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
@@ -289,16 +289,16 @@ Come and join us!</p></article>
       <div class="w3-progress-container w3-grey">
         <div class="w3-progressbar w3-dark-grey" style="width:85%"></div>
       </div>
-      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
+     <!--  <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
       <div class="w3-progress-container w3-grey">
         <div class="w3-progressbar w3-dark-grey" style="width:75%"></div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
 
-<!-- Pricing Section -->
-<div class="w3-container w3-padding-128 w3-center w3-dark-grey" id="pricing">
+<!--events Section -->
+<div class="w3-container w3-padding-128 w3-center w3-dark-grey" id="events">
   <h3>Events & Hot News</h3>
   <p class="w3-large">here our recently activities</p>
   <div class="w3-row-padding" style="margin-top:64px">
@@ -391,11 +391,10 @@ Electronic City Bangalore 560100</p>
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-btn w3-padding w3-light-grey w3-hover-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
-    <i class="fa fa-flickr w3-hover-text-red"></i>
-    <i class="fa fa-instagram w3-hover-text-purple"></i>
-    <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-    <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
+    <!-- <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+    <i class="fa fa-linkedin w3-hover-text-indigo"></i> -->
   </div>
 </footer>
  
