--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("304a.jpg");
+    background-image: url("images/304a.jpg");
     min-height: 100%;
 }
 .w3-navbar li a {
@@ -67,9 +67,9 @@ body, html {
     <p><a href="#about" class="w3-btn w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-padding-xxlarge w3-text-grey w3-large">
-    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"><i class="fa fa-facebook-official"></i></a>
+    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-facebook-official"></i></a>
    <!--  <a href="#" class="w3-hover-text-white"><i class="fa fa-flickr"></i></a> -->
-    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-instagram"></i></a>
     <!-- <a href="#" class="w3-hover-text-white"><i class="fa fa-twitter"></i></a>
     <a href="#" class="w3-hover-text-white"><i class="fa fa-linkedin"></i></a> -->
   </div>
@@ -100,7 +100,7 @@ At the core, QTPi runs on the revolutionary chipset, Arduino, that best suits fo
 Science is continuously evolving. 
 At the ebb of this expansion is technological innovation in robotics.
 Every day, our lives are touched in more than one way by robots. 
-Some are perceivable, some are not.<img src="2a.jpg" width="400" height="300" align="right">
+Some are perceivable, some are not.<img src="images/2a.jpg" width="400" height="300" align="right">
 In an all-consuming, all digital world that would in future, be increasingly dependent, learning about how robots and automation work is truly necessary for everyone, especially our children. 
 As the Internet is slowly spreading wings, and getting all the tangible, and intangible stuff from our everyday lives connected to it, in order to make everything most useful and efficient, at the core lies robotics and artificial intelligence.
 Touch, see, and feel the learning.
@@ -148,7 +148,7 @@ Come and join us!</p></article>
       <p><a href="#work" class="w3-btn"><i class="fa fa-th"></i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="4a.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="images/4a.jpg" alt="Buildings" width="700" height="394">
     </div>
   </div>
 </div>
@@ -232,22 +232,22 @@ Come and join us!</p></article>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="1a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <img src="images/1a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="2a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <img src="images/2a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="3a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+      <img src="images/3a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="4a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+      <img src="images/4a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="5a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
+      <img src="images/5a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
     </div>
    <!--  <div class="w3-col l3 m6">
       <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
@@ -391,8 +391,8 @@ Electronic City Bangalore 560100</p>
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-btn w3-padding w3-light-grey w3-hover-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
-    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
+    <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+    <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
     <!-- <i class="fa fa-twitter w3-hover-text-light-blue"></i>
     <i class="fa fa-linkedin w3-hover-text-indigo"></i> -->
   </div>
