--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-padding-xxlarge w3-text-white">
-    <span class="w3-jumbo w3-hide-small">Qtpi play and innovate</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Qtpi play and innovate</span><br>
-    <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
+    <span class="w3-jumbo w3-hide-small">QtPi Play and Innovate</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">QtPi Play and Innovate</span><br>
+    <span class="w3-large">Stop wasting time on wiring and soldering. Just Plug and Play</span>
     <p><a href="#about" class="w3-btn w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-padding-xxlarge w3-text-grey w3-large">
@@ -87,34 +87,32 @@ Indeed! -->
 We are QTPi, perhaps because we are always curious.
 Curious about robots.
 We believe that, ‘HOW?’ is as important, and also, the precursor to the biggest question of life, ‘WHY?!’
-We love robots so much that we make them.
-Not the ones you see droning in factories or floating in space.
+We love robots so much that we build everything inhouse.
 We make ones that fit like cute toys, but are complete robots in themselves.
 We love teaching kids how to work with them, to learn the science of robotics better.
 Through these lessons, we make kids understand why certain components work in a certain way, and contributes to the whole set-up.
 We show you the big picture. 
-With a mission to reach everyone across the socio-economic spectrum, we at QTPi have produced a beautiful ensemble of build-and-learn robot sets that are not only cost-effective, but also amazingly modular - flexible enough to create multiple robots by combining them differently.  
+With a mission to reach everyone across the socio-economic spectrum, we at QtPi have produced a beautiful ensemble of build-and-learn robot sets that are not only cost-effective, but also amazingly modular - flexible enough to create multiple robots by combining them differently.  
 So many combinations that you will be amazed, more than amused.
-Just as the alphabets come together to form the language, just as seven notes combine in a million ways to create music, our kit has been thoughtfully assembled, with the best-in-class components and modules to allow these variations - that cover all the major types of sensor functions that make robots 'think' and 'act' in real life situations.
+Just as the alphabets come together to form words and amazing stories, just as seven notes combine in a million ways to create music, our kit has been thoughtfully designed to understand the basics with the best-in-class components and modules to allow you to build stories of your own.
 At the core, QTPi runs on the revolutionary chipset, Arduino, that best suits for learning purposes. 
 Science is continuously evolving. 
 At the ebb of this expansion is technological innovation in robotics.
 Every day, our lives are touched in more than one way by robots. 
 Some are perceivable, some are not.<img src="images/2a.jpg" width="400" height="300" align="right">
 In an all-consuming, all digital world that would in future, be increasingly dependent, learning about how robots and automation work is truly necessary for everyone, especially our children. 
-As the Internet is slowly spreading wings, and getting all the tangible, and intangible stuff from our everyday lives connected to it, in order to make everything most useful and efficient, at the core lies robotics and artificial intelligence.
+As the Internet is spreading wings, and getting all the tangible, and intangible stuff from our everyday lives connected to it, in order to make everything most useful and efficient, at the core lies robotics and artificial intelligence.
 Touch, see, and feel the learning.
 Often times, rote learning fails to kindle the imagination of our children, and the lessons are often forgotten. 
-QTPi robot kits are built exactly to bridge this gap. What you see is what you get, literally!
-When we start, your kid already gets the full robot ensemble kit, which would be taught to be put to use, by our skilled teachers.
-Each block fits into each other block. Every component is designed to meet the purpose of producing as many robot combinations as it may.. Many times leaving the kits to the imaginations of the kids!
+QtPi robot kits are built exactly to bridge this gap. What you see is what you get, literally!
+
 Block by Block
 Strength to Strength,
 You will see how learning the ‘HOW’ of things work, will eventually lead the kids to raise the bigger question, ‘WHY’.
 All this is brought to you at an unbelievable price, which includes the kit that can be taken home for more experiments. 
 We will also provide a complete set of instructional videos and learning material which can be accessed easily on your home computers, and other devices.
 Curious = Cute!
-We are QTPi
+We are QtPi
 Come and join us!</p></article>
     <!-- <div class="w3-quarter">
       <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
