--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>qtpi</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -50,7 +51,7 @@ body, html {
 
 <!-- Sidenav on small screens when clicking the menu icon -->
 <nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close ×</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close Ã—</a>
   <a href="#about" onclick="w3_close()">ABOUT</a>
   <!-- <a href="#team" onclick="w3_close()">TEAM</a> -->
   <a href="#work" onclick="w3_close()">WORK</a>
@@ -86,7 +87,7 @@ body, html {
 Indeed! -->
 We are QTPi, perhaps because we are always curious.
 Curious about robots.
-We believe that, ‘HOW?’ is as important, and also, the precursor to the biggest question of life, ‘WHY?!’
+We believe that, â€˜HOW?â€™ is as important, and also, the precursor to the biggest question of life, â€˜WHY?!â€™
 We love robots so much that we build everything inhouse.
 We make ones that fit like cute toys, but are complete robots in themselves.
 We love teaching kids how to work with them, to learn the science of robotics better.
@@ -108,7 +109,7 @@ QtPi robot kits are built exactly to bridge this gap. What you see is what you g
 
 Block by Block
 Strength to Strength,
-You will see how learning the ‘HOW’ of things work, will eventually lead the kids to raise the bigger question, ‘WHY’.
+You will see how learning the â€˜HOWâ€™ of things work, will eventually lead the kids to raise the bigger question, â€˜WHYâ€™.
 All this is brought to you at an unbelievable price, which includes the kit that can be taken home for more experiments. 
 We will also provide a complete set of instructional videos and learning material which can be accessed easily on your home computers, and other devices.
 Curious = Cute!
@@ -261,7 +262,7 @@ Come and join us!</p></article>
 
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-closebtn w3-text-white w3-opacity w3-hover-opacity-off w3-xxlarge w3-container w3-display-topright" title="Close Modal Image">×</span>
+  <span class="w3-closebtn w3-text-white w3-opacity w3-hover-opacity-off w3-xxlarge w3-container w3-display-topright" title="Close Modal Image">Ã—</span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
     <img id="img01" class="w3-image">
     <p id="caption" class="w3-opacity w3-large"></p>
