--- a/index.html
+++ b/index.html
@@ -84,17 +84,15 @@ body, html {
      <p align="left">Hi!
 <!-- We are QTPi.
 Indeed! -->
-We are QTPi, perhaps because we are always curious.
+We are QtPi ( pronounced as Cutie Pie ) , perhaps because we are always curious.
 Curious about robots.
-We believe that, ‘HOW?’ is as important, and also, the precursor to the biggest question of life, ‘WHY?!’
-We love robots so much that we build everything inhouse.
-We make ones that fit like cute toys, but are complete robots in themselves.
-We love teaching kids how to work with them, to learn the science of robotics better.
-Through these lessons, we make kids understand why certain components work in a certain way, and contributes to the whole set-up.
-We show you the big picture. 
+We love robots so much that we design and manufacture most of the parts inhouse so that you can build your imagination on our platform.
+You can make cute toys or build miniatures of real world automation without reinventing the wheel. But You will learn the nut and bolts of robotics when you play with QtPi.
+Robotics ia both art and science. We have solved the basics of arts and science for you. Now its your turn. be the creator!!! Go Innovate!!!
+
 With a mission to reach everyone across the socio-economic spectrum, we at QtPi have produced a beautiful ensemble of build-and-learn robot sets that are not only cost-effective, but also amazingly modular - flexible enough to create multiple robots by combining them differently.  
-So many combinations that you will be amazed, more than amused.
-Just as the alphabets come together to form words and amazing stories, just as seven notes combine in a million ways to create music, our kit has been thoughtfully designed to understand the basics with the best-in-class components and modules to allow you to build stories of your own.
+You will be amazed, more than amused about your innate potential once you start playing with QtPi.
+Just as the alphabets becomes words and build amazing stories, just as seven notes combine in a million ways to create music, our kit has been thoughtfully designed to provide you the basics with the best-in-class components and modules to allow you to build stories of your own.
 At the core, QTPi runs on the revolutionary chipset, Arduino, that best suits for learning purposes. 
 Science is continuously evolving. 
 At the ebb of this expansion is technological innovation in robotics.
@@ -103,15 +101,16 @@ Some are perceivable, some are not.<img src="images/2a.jpg" width="400" height="
 In an all-consuming, all digital world that would in future, be increasingly dependent, learning about how robots and automation work is truly necessary for everyone, especially our children. 
 As the Internet is spreading wings, and getting all the tangible, and intangible stuff from our everyday lives connected to it, in order to make everything most useful and efficient, at the core lies robotics and artificial intelligence.
 Touch, see, and feel the learning.
-Often times, rote learning fails to kindle the imagination of our children, and the lessons are often forgotten. 
-QtPi robot kits are built exactly to bridge this gap. What you see is what you get, literally!
+Rote learning fails to kindle the imagination of our children often, and the lessons are forgotten. 
+QtPi robot kits are built exactly to bridge this gap. What you see is what you get, literally! It will rekindle the basics you learn and mostly it will trigger curiosity to learn the basics. You will start appreciating everything around you when you understand the basics of physics.
 
 Block by Block
 Strength to Strength,
-You will see how learning the ‘HOW’ of things work, will eventually lead the kids to raise the bigger question, ‘WHY’.
-All this is brought to you at an unbelievable price, which includes the kit that can be taken home for more experiments. 
-We will also provide a complete set of instructional videos and learning material which can be accessed easily on your home computers, and other devices.
-Curious = Cute!
+You will see how learning the ‘HOW’ of things work, will eventually lead the kids to invent new things in life. Learn to break complex problems and solve them step by step. 
+
+QtPi will bring out the creator in you. Take this clay and mould it into something unique !!!
+Our Consumers will be the next Producers !!! Build!!! Share!!! Be Proud!!! 
+
 We are QtPi
 Come and join us!</p></article>
     <!-- <div class="w3-quarter">
