--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body, html {
 
 
 <!-- About Section -->
-<div class="w3-container w3-padding-128" id="about">
+<div class="w3-container w3-light-grey w3-padding-128" id="about">
   <h3 class="w3-center">ABOUT THE COMPANY</h3>
   <p class="w3-center w3-large"></p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -172,7 +172,7 @@ Come and join us!
 </div>
 
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey w3-padding-64">
+<div class="w3-container w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>We know design.</h3>
@@ -259,9 +259,9 @@ Come and join us!
 <!-- </div> -->
 
 <!-- Work Section -->
-<div class="w3-container w3-padding-128" id="work">
+<div class="w3-container  w3-light-grey w3-padding-128" id="work">
   <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
+  <p class="w3-center w3-large"></p>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
