clear skill sections

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Come and join us!
 </div>
 
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-padding-64">
+<div class="w3-container w3-padding-64  w3-light-grey">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>We know design.</h3>
@@ -236,80 +236,8 @@ Come and join us!
   </div>
 </div>
 
-<!-- Team Section -->
-<!-- <div class="w3-container w3-padding-128" id="team">
-  <h3 class="w3-center">THE TEAM</h3>
-  <p class="w3-center w3-large">The ones who runs this company</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card-2">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-        <div class="w3-container">
-          <h3>name</h3>
-          <p class="w3-opacity">CEO & Founder</p>
-          <p>description.</p>
-          <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card-2">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-        <div class="w3-container">
-          <h3>name</h3>
-          <p class="w3-opacity">Art Director</p>
-          <p>description.</p>
-          <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card-2">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
-        <div class="w3-container">
-          <h3>name</h3>
-          <p class="w3-opacity">Web Designer</p>
-          <p>description.</p>
-          <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card-2">
-        <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-        <div class="w3-container">
-          <h3>name</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>description.</p>
-          <p><button class="w3-btn-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
- -->
-<!-- Promo Section "Statistics" -->
-<!-- <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64"> -->
- <!--  <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
-    <br>Partners
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">55+</span>
-    <br>Projects Done
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">89+</span>
-    <br>Happy Clients
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">150+</span>
-    <br>Meetings
-  </div> -->
-<!-- </div> -->
-
 <!-- Work Section -->
-<div class="w3-container  w3-light-grey w3-padding-128" id="work">
+<div class="w3-container w3-padding-128" id="work">
   <h3 class="w3-center">OUR WORK</h3>
   <p class="w3-center w3-large"></p>
 
@@ -354,6 +282,7 @@ Come and join us!
 </div>
 
 <!-- Skills Section -->
+<!--
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
@@ -372,13 +301,10 @@ Come and join us!
       <div class="w3-progress-container w3-grey">
         <div class="w3-progressbar w3-dark-grey" style="width:85%"></div>
       </div>
-     <!--  <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
-      <div class="w3-progress-container w3-grey">
-        <div class="w3-progressbar w3-dark-grey" style="width:75%"></div>
-      </div> -->
     </div>
   </div>
 </div>
+-->
 
 <!--events Section -->
 <div class="w3-container w3-padding-128 w3-center w3-dark-grey" id="events">
