--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ body, html {
 }
 </style>
 <body>
-
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <ul class="w3-navbar w3-white w3-card-2" id="myNavbar">
@@ -459,6 +458,17 @@ function w3_close() {
     mySidenav.style.display = "none";
 }
 </script>
+<!-- Go to www.addthis.com/dashboard to customize your tools --> 
+<!--    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-583811377e97e2ec"></script> -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-88243946-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
