--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>qtpi</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +24,20 @@ body, html {
     padding: 16px;
     float: left;
 }
+    
+
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88243946-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
 <body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
@@ -33,11 +47,11 @@ body, html {
     </li>
     <!-- Right-sided navbar links -->
     <li class="w3-right w3-hide-small">
-    <a href="#home">Home</a>
+    <a href="#home">HOME</a>
       <a href="#about">ABOUT</a>
       <!-- <a href="#team"><i class="fa fa-user"></i> TEAM</a> -->
       <a href="#work"><i class="fa fa-th"></i> WORK</a>
-      <a href="#events"><i class="fa fa-calendar-check-o"></i> Events</a>
+      <a href="#events"><i class="fa fa-calendar-check-o"></i> EVENTS</a>
       <a href="#contact"><i class="fa fa-envelope"></i> CONTACT</a>
     </li>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -52,10 +66,10 @@ body, html {
 <!-- Sidenav on small screens when clicking the menu icon -->
 <nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close ×</a>
-  <a href="#home" onclick="w3_close()">Home</a>
+  <a href="#home" onclick="w3_close()">HOME</a>
   <a href="#about" onclick="w3_close()">ABOUT</a>
   <a href="#work" onclick="w3_close()">WORK</a>
-  <a href="#events" onclick="w3_close()">Events</a>
+  <a href="#events" onclick="w3_close()">EVENTS</a>
   <a href="#contact" onclick="w3_close()">CONTACT</a>
 </nav>
 
@@ -388,9 +402,11 @@ Electronic City Bangalore 560100</p>
     </div>
     <div class="w3-half">
       <!-- Add Google Maps -->
+<!--
       <div id="" class="w3-greyscale-max">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62241.32684220203!2d77.63917817893822!3d12.837917631501954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6c8a7750e1c3%3A0x4a5cfc0fce5af71d!2sElectronic+City%2C+Bengaluru%2C+Karnataka!5e0!3m2!1sen!2sin!4v1480246499835" width="800" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
+-->
     </div>
   </div>
 </div>
@@ -460,6 +476,7 @@ function w3_close() {
 </script>
 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
 <!--    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-583811377e97e2ec"></script> -->
+<!--
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -470,5 +487,6 @@ function w3_close() {
   ga('send', 'pageview');
 
 </script>
+-->
 </body>
 </html>
