remove map contents

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Come and join us!
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>We know design.</h3>
-      <p>we have our own building block so we can build our own design. <br>we can also make our own building block structure through 3D-printer.</p>
+      <p>we can also make our own building block structure through 3D-printer.</p>
       <p><a href="#work" class="w3-btn"><i class="fa fa-th"></i> View Our Works</a></p>
     </div>
 
@@ -401,12 +401,8 @@ Electronic City Bangalore 560100</p>
       </form>
     </div>
     <div class="w3-half">
-      <!-- Add Google Maps -->
-<!--
-      <div id="" class="w3-greyscale-max">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62241.32684220203!2d77.63917817893822!3d12.837917631501954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6c8a7750e1c3%3A0x4a5cfc0fce5af71d!2sElectronic+City%2C+Bengaluru%2C+Karnataka!5e0!3m2!1sen!2sin!4v1480246499835" width="800" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
--->
+     
+
     </div>
   </div>
 </div>
@@ -427,27 +423,27 @@ Electronic City Bangalore 560100</p>
 
 <script>
 <!-- Google Map Location -->
-var myCenter = new google.maps.LatLng(41.878114, -87.629798);
-
-function initialize() {
-var mapProp = {
-  center: myCenter,
-  zoom: 12,
-  scrollwheel: false,
-  draggable: false,
-  mapTypeId: google.maps.MapTypeId.ROADMAP
-  };
-
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-var marker = new google.maps.Marker({
-  position: myCenter,
-});
-
-marker.setMap(map);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
+//var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+//
+//function initialize() {
+//var mapProp = {
+//  center: myCenter,
+//  zoom: 12,
+//  scrollwheel: false,
+//  draggable: false,
+//  mapTypeId: google.maps.MapTypeId.ROADMAP
+//  };
+//
+//var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+//
+//var marker = new google.maps.Marker({
+//  position: myCenter,
+//});
+//
+//marker.setMap(map);
+//}
+//
+//google.maps.event.addDomListener(window, 'load', initialize);
 
 // Modal Image Gallery
 function onClick(element) {
