google  remove mape ink

--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@ body, html {
     
     <div class="w3-container  w3-padding-128">
   <h3>Just Plug and Play</h3>
-<!--  <p class="w3-large">Try to resize the window!</p>-->
-
 
 <div class="w3-row">
   <div class="w3-container w3-half">
@@ -333,7 +331,6 @@ Electronic City Bangalore 560100</p>
     </div>
     <div class="w3-half">
      
-
     </div>
   </div>
 </div>
@@ -344,37 +341,13 @@ Electronic City Bangalore 560100</p>
   <div class="w3-xlarge w3-section">
     <a href="https://www.facebook.com/qtpirobotics/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
     <a href="https://www.instagram.com/qtpiofficial/" class="w3-hover-text-white"  target="_blank"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
-    <!-- <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-    <i class="fa fa-linkedin w3-hover-text-indigo"></i> -->
   </div>
 </footer>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
 
 <script>
-<!-- Google Map Location -->
-//var myCenter = new google.maps.LatLng(41.878114, -87.629798);
-//
-//function initialize() {
-//var mapProp = {
-//  center: myCenter,
-//  zoom: 12,
-//  scrollwheel: false,
-//  draggable: false,
-//  mapTypeId: google.maps.MapTypeId.ROADMAP
-//  };
-//
-//var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-//
-//var marker = new google.maps.Marker({
-//  position: myCenter,
-//});
-//
-//marker.setMap(map);
-//}
-//
-//google.maps.event.addDomListener(window, 'load', initialize);
 
 // Modal Image Gallery
 function onClick(element) {
@@ -402,7 +375,5 @@ function w3_close() {
 }
 </script>
 
-    <!-- Go to www.addthis.com/dashboard to customize your tools --> 
-<!--    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-583811377e97e2ec"></script> -->
 </body>
 </html>
