add youtube subscribe

--- a/index.html
+++ b/index.html
@@ -154,10 +154,7 @@ body, html {
           <param name="wmode" value="transparent">
         </object></div> 
 </div>
-</div>  </div>  
-<!--      <img class="w3-image w3-round-large" src="images/block.jpg" alt="Buildings" style="width:60%">
- -->     <!--  <img class="w3-image w3-round-large" src="images/block1.jpg" alt="Buildings" style="width:60%"> -->
-
+    </div> &nbsp; &nbsp;QtPi &nbsp;<a href="https://www.youtube.com/channel/UCvyfSc2YxuWwc0vNVOIPQXQ" target="_blank" class="w3-btn fa fa-youtube-play w3-red">Subscribe</a></div> 
 
 
 <!-- About Section -->
