contact submit deasable

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Electronic City Bangalore 560100</p>
       <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +91-9791172766, +91-9629990057</p>
       <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: info@qtpi.in, faraz@qtpi.in</p>
       <br>
-      <form action="form.asp" target="_blank">
+      <form action="" target="_blank">
         <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
         <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
         <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
