--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ body, html {
 <div class="w3-row">
 <div class="w3-third w3-container">
   <h4>Bubble Blower</h4>  
-    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1" id="video-cck-youtube-flash-5">
+    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1" >
+<!--
           <param name="movie" value="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1">
          <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">
           <param name="allowScriptAcess" value="sameDomain">
@@ -132,11 +133,13 @@ body, html {
           <param name="salign" value="TL">
           <param name="FlashVars" value="playerMode=embedded">
           <param name="wmode" value="transparent">
+-->
         </object></div>
 </div>
 <div class="w3-third w3-container">
   <h4>Army Tank</h4>
-   <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1" id="video-cck-youtube-flash-5">
+   <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1">
+<!--
           <param name="movie" value="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1">
          <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">
           <param name="allowScriptAcess" value="sameDomain">
@@ -146,20 +149,25 @@ body, html {
           <param name="salign" value="TL">
           <param name="FlashVars" value="playerMode=embedded">
           <param name="wmode" value="transparent">
+-->
         </object></div> 
 </div>
 <div class="w3-third w3-container">
   <h4>Wall-E</h4>
-    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1" id="video-cck-youtube-flash-5">
-          <param name="movie" value="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">
-         <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">
-          <param name="allowScriptAcess" value="sameDomain">
+    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">
+<!--          <param name="movie" value="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">-->
+<!--         <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">-->
+<!--          <param name="allowScriptAcess" value="sameDomain">-->
+<!--
           <param name="quality" value="best">
           <param name="bgcolor" value="#FFFFFF">
           <param name="scale" value="noScale">
           <param name="salign" value="TL">
+-->
+<!--
           <param name="FlashVars" value="playerMode=embedded">
           <param name="wmode" value="transparent">
+-->
         </object></div> 
 </div>
     </div> &nbsp; &nbsp;QtPi &nbsp;<a href="https://www.youtube.com/channel/UCvyfSc2YxuWwc0vNVOIPQXQ" target="_blank" class="w3-btn fa fa-youtube-play w3-red">Subscribe</a></div> 
