remove youtube useless code

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body, html {
 <div class="w3-row">
 <div class="w3-third w3-container">
   <h4>Bubble Blower</h4>  
-    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1" >
+    <div><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1" >
 <!--
           <param name="movie" value="https://www.youtube.com/v/PxdnOPFBDqk&amp;rel=0&amp;fs=1">
          <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">
@@ -138,7 +138,7 @@ body, html {
 </div>
 <div class="w3-third w3-container">
   <h4>Army Tank</h4>
-   <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1">
+   <div><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1">
 <!--
           <param name="movie" value="https://www.youtube.com/v/fU6StR5Ct3s&amp;rel=0&amp;fs=1">
          <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">
@@ -154,7 +154,7 @@ body, html {
 </div>
 <div class="w3-third w3-container">
   <h4>Wall-E</h4>
-    <div id="video_cck_youtube_flash_wrapper_5"><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">
+    <div><object type="application/x-shockwave-flash" height="350" width="425" data="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">
 <!--          <param name="movie" value="https://www.youtube.com/v/nfVcN-lKeKs&amp;rel=0&amp;fs=1">-->
 <!--         <param name="movie" value="https://www.youtube.com/v/v=PxdnOPFBDqk;rel=0&amp;fs=1">-->
 <!--          <param name="allowScriptAcess" value="sameDomain">-->
