change tweeter icon

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Come and join us!
         
 <p class="getticket_btn "><a href="http://innofest.in/2016" class="gettickets_btnpop" target="_blank">Innofest 2016 on December 08<sup>th</sup> at The Lalit Ashok, Bengaluru</a> </p>
   <p> <a href="https://www.facebook.com/qtpirobotics/" class="w3-btn w3-indigo" style="border-radius: 8px;"  target="_blank"><i class="fa fa-facebook"></i> &nbsp;Share</a>
-        <a href="https://twitter.com/qtpiofficial" class="w3-btn w3-blue" style="border-radius: 8px;"><i class="fa fa-twitter w3-hover-text-blue"></i>&nbsp;Tweet</a></p>
+        <a href="https://twitter.com/qtpiofficial" class="w3-btn w3-blue" style="border-radius: 8px;"><i class="fa fa-twitter"></i>&nbsp;Tweet</a></p>
     
 </div>
 </div>
