change in contact form target setting

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Electronic City Bangalore 560100</p>
 
     </div>
     <div class="w3-half">
-
+        <form action="MAILTO:nitin@qtpi.in" method="post" enctype="text/plain">
         <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="name"></p>
         <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="email"></p>
         <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="subject"></p>
@@ -329,10 +329,6 @@ Electronic City Bangalore 560100</p>
           </button>
         </p>
       </form>
-<!--
-               <a href="https://www.facebook.com/qtpirobotics/" class="w3-btn w3-indigo" style="border-radius: 8px;"  target="_blank"><i class="fa fa-facebook"></i> &nbsp;Share</a>
-        <a href="https://twitter.com/qtpiofficial" class="w3-btn w3-blue" style="border-radius: 8px;"><i class="fa fa-twitter w3-hover-text-blue"></i>&nbsp;Tweet</a>
--->
 
     </div>
   </div>
