--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Come and join us!
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Qtpi
 Electronic City Bangalore 560100</p>
 -->
-      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: Jaison +91-7259277794 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sarfaraz +91-7022645361</p>
+      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: Jaison +91-7259277794 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sarfaraz +91-7022645361</p>
       <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: info@qtpi.in, faraz@qtpi.in</p>
       <br>
 
