add flipbook js

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Electronic City Bangalore 560100</p>
   </div>
 </footer>
 
-<script async defer src="https://d33i2vgywgme2s.cloudfront.net/Content/R120/embed/boot.js"></script>
+<script async defer src="js/flipbook.js"></script>
 <script>
 // Modal Image Gallery
 function onClick(element) {
